--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-<title>Page Title</title>
+<title>Cobra Kai Banking</title>
 </head>
 <body>
 
