--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css">
 <title>Cobra Kai Banking</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+    <body>
+        <h1>
+            <img src="logo.png" width="600" height="200">
+        </h1>
+        <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="">Accounts</a>
+            </li>
+            <li>
+                <a href="">Planning</a>
+            </li>
+            <li>
+                <a href="">Services</a>
+            </li>
+            <li>
+                <a href="">Login</a>
+            </li>
+        </ul>
+        </nav>
+        <p>
+            <h2>Welcome to Cobra Kai Banking</h2>
+        </p>
+        <footer>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+        </footer>
+    </body>
 </html>
