--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="">Accounts</a>
+                <a href="accounts.html">Accounts</a>
             </li>
             <li>
-                <a href="">Planning</a>
+                <a href="planning.html">Planning</a>
             </li>
             <li>
-                <a href="">Services</a>
+                <a href="service.html">Services</a>
             </li>
             <li>
-                <a href="">Login</a>
+                <a href="login.html">Login</a>
             </li>
         </ul>
         </nav>
