--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
-  <title>Cobra Kai Banking</title>
+  <title>Cobra Kai Banking : Login</title>
 </head>
 
 <body>
@@ -20,9 +20,6 @@
       </li>
       <li>
         <a href="service.html">Services</a>
-      </li>
-      <li>
-        <a href="login.html">Login</a>
       </li>
     </ul>
   </nav>
@@ -47,8 +44,9 @@
       </div>
       <br>
       <div class="row">
-        <input type="submit" value="Submit">
+        <input type="submit" value="Login">
       </div>
+      <p>Don't have an account with us yet? <a href="signup.html">Sign up Here</a>.</p>
     </form>
   </div>
 </body>
