--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
-<title>Cobra Kai Banking</title>
+<title>Cobra Kai Banking : Services</title>
 </head>
 <body>
     <nav>
