--- a/app/website/planning.html
+++ b/app/website/planning.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
-<title>Cobra Kai Banking : Services</title>
+    <link rel="stylesheet" href="/app/website/static/css/styles.css">
+<title>Cobra Kai Banking : Planning</title>
 </head>
 <body>
     <nav>
