--- a/app/website/index.html
+++ b/app/website/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
+
 <title>Cobra Kai Banking</title>
+<link rel="stylesheet" href="/app/website/static/css/styles.css">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
     <body>
