--- a/app/website/profile.html
+++ b/app/website/profile.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
-<title>Cobra Kai Banking : Planning</title>
+    <link rel="stylesheet" href="/app/website/static/css/styles.css">
+<title>Cobra Kai Banking</title>
 </head>
 <body>
     <nav>
@@ -20,7 +20,7 @@
                 <a href="service.html">Services</a>
             </li>
             <li>
-                <a href="login.html">Login</a>
+                <a href="login.html">Logout</a>
             </li>
         </ul>
     </nav>
