--- a/app/website/signup.html
+++ b/app/website/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/app/website/static/css/styles.css">
 <title>Cobra Kai Banking : Sign Up</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
