--- a/app/website/login.html
+++ b/app/website/login.html
@@ -25,7 +25,7 @@
   </nav>
   <br><br><br>
   <div class="container">
-    <form action="/app/website/planning.html">
+    <form action="/app/website/profile.html">
       <div class="row">
         <div class="col-25">
           <label for="Username">Username:</label>
@@ -46,7 +46,7 @@
       <div class="row">
         <input type="submit" value="Login">
       </div>
-      <p>Don't have an account with us yet? <a href="/app/website/signup.html">Sign up Here</a>.</p>
+      <p>Don't have an account with us yet? <a href="/app/website/register.html">Sign up Here</a>.</p>
     </form>
   </div>
 </body>
