added content to page

--- a/app/website/accounts.html
+++ b/app/website/accounts.html
@@ -24,5 +24,69 @@
             </li>
         </ul>
     </nav>
+    <h2> The Types of Accounts that we offer</h2>
+    <section class="container">
+        <h3> Checkings </h3>
+        <blockquote>
+            <p>
+            What is a checking account?
+            <br>
+                <blockquote>
+                Checking accounts are all-purpose places to keep money for short- to medium-term financial needs. Your employer can directly deposit your paychecks in the account,
+                you can link it to payment apps like Venmo and PayPal, you can make wire transfers and mobile check deposits, you can pay bills from it and more.
+                Checking accounts are a building block to manage your money and make financial tasks easier.
+                </blockquote>
+            </p>
+        </blockquote>
+        <br>
+        <blockquote>
+            <p>
+            Why also have a checking account instead of only a savings account?
+            <br>
+                <blockquote>
+                Checking accounts typically come with personal checks and a debit or ATM card. Savings accounts aren't meant to be used for daily payments,
+                 so they don't come with debit cards or check-writing abilities.
+                  Though you can use checking accounts for check writing, you'll probably use a debit or ATM card to access the money in your account more often.
+                   Checking accounts tend to have lower interest rates than savings accounts.
+                    Savings and money market accounts typically have higher interest rates. Certain providers, typically online-only financial institutions,
+                     offer checking accounts with higher interest rates than checking accounts at brick-and-mortar banks.
+                </blockquote>
+            </p>
+            <br>
+            <form action="/app/website/register.html">
+            <input type="submit" value="Register!">
+        </form>
+        <br>
+        </blockquote>
+        
+    </section>
+<br>
+    <section class="container">
+        <h3> Savings </h3>
+        <blockquote>
+            <p>
+                What is a savings account?
+                <br>
+                <blockquote>
+                A savings account is typically an interest-bearing deposit account that is federally insured and held at a financial institution,
+                 such as a bank or credit union. Interest-bearing means that the bank pays you to keep your funds deposited, with annual percentage yields on some accounts reaching 4%.
+                 Also, unlike investments, savings accounts are federally insured up to $250,000 per depositor, bank and ownership category, so you won't lose your money if the bank fails.
+                </blockquote>
+            </p>
+        </blockquote>
+        <br>
+        <blockquote>
+            <p>
+            Everyone needs a savings account, Why? 
+            <br>
+            <blockquote> Using a savings account creates some distance between everyday spending money that's kept in your checking account and cash that's needed later,
+             whether for an unexpected emergency or a planned vacation. Savings accounts also typically earn more interest than checking accounts.</blockquote>
+            </p> <br>
+            <form action="/app/website/register.html">
+            <input type="submit" value="Register!">
+        </form>
+        <br>
+        </blockquote>
+    </section>
 </body>
 </html>
