--- a/app/website/service.html
+++ b/app/website/service.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Cobra Kai Banking : Services</title>
     <link rel="stylesheet" href="/app/website/static/css/styles.css">
-<title>Cobra Kai Banking : Services</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <h1>
+        <img src="logo.png" width="600" height="200">
+    </h1>
     <nav>
         <ul>
             <li>
@@ -20,9 +24,172 @@
                 <a href="service.html">Services</a>
             </li>
             <li>
-                <a href="login.html">Login</a>
+                <a href="login.html" class="split">Login</a>
             </li>
         </ul>
     </nav>
+    <h2> Services at Cobra Kai </h2>
+    <div class="row">
+        <div class="column">
+            <div class="container">
+        <h3> Advancing of Loans </h3>
+        <blockquote>
+            <p>
+                Cobra Kai is a profit-oriented business organizations.
+                 So we have to advance a loan to the public and generate interest from
+                  them as profit. After keeping certain cash reserves, we provide short-term,
+                   medium-term, and long-term loans to needy borrowers.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Bank Guarantee </h3>
+        <blockquote>
+            <p>
+                When customers have to deposit certain funds in governmental offices or courts for a specific purpose,
+                 We can present itself as the guarantee for the customer instead of depositing funds by customers.
+            </p>
+        </blockquote>
+    </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Check Payment </h3>
+        <blockquote>
+            <p>
+            We provide cheque pads to account holders. Account-holders can draw cheques from us to pay money.
+            We pay for the cheques to customers after formal verification and official procedures.
+            </p>
+        </blockquote>
+    </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Foreign Currency Exchange </h3>
+        <blockquote>
+            <p>
+                We deal with foreign currencies. As per customers' requirements, we'll exchange foreign currencies with local currencies,
+                 which is essential to settle down the dues in international trade.
+            </p>
+        </blockquote>
+    </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Consultancy </h3>
+        <blockquote>
+            <p>
+                In this function, we hire financial, legal, and market experts who advise customers regarding investment, industry, trade, income, tax, etc.
+                 They can expand their function to consultancy business.
+            </p>
+        </blockquote>
+    </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Credit Cards</h3>
+        <blockquote>
+            <p>
+                A credit card is a card that allows its holders to make purchases of goods and services in exchange for the credit card's provider immediately paying for the goods or services.
+                 The cardholder promises to pay back the purchase amount to the card provider over some time and with interest.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> ATM Services</h3>
+        <blockquote>
+            <p>
+                ATMs replace human bank tellers in performing giving banking functions such as deposits, withdrawals, and account inquiries. Our ATMs provide:
+                <b>24-hour availability, Elimination of labor cost, Convenience of location</b>
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <br>
+        <div class="column">
+            <div class="container">
+        <h3> Debit Cards</h3>
+        <blockquote>
+            <p>
+                Debit cards are used to withdraw funds from cardholders' accounts electronically.
+                 Most debit cards require a Personal Identification Number (PIN) to be used to verify the transaction.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Home Banking</h3>
+        <blockquote>
+            <p>
+                Home banking is the process of completing the financial transaction from one's home instead of utilizing a our branch. It includes making account inquiries,
+                 transferring money, paying bills, applying for loans, and directing deposits.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Online Banking </h3>
+        <blockquote>
+            <p>
+                We offer online banking that allows account holders to access their account data via the internet. 
+                Online banking through traditional banks enables customers to perform all routine transactions, such as account transfers, balance inquiries, bill payments, and stop-payment requests.
+                We even offer online loans and credit card applications.
+                Account information can be accessed anytime, day or night, and can be done from anywhere.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Mobile Banking </h3>
+        <blockquote>
+            <p>
+                Mobile banking (also known as M-Banking) is a term used for performing balance checks, account transactions, payments, credit applications,
+                 and other banking transactions through a mobile device such as a mobile phone or Personal Digital Assistant (PDA),
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Accepting Deposit</h3>
+        <blockquote>
+            <p>
+                Accepting deposits from savers or account holders is the primary function of Cobra Kai Banking.
+                 We receive deposits from those who can save money but cannot utilize it in profitable sectors.
+                People prefer to deposit their savings in a bank because by doing so, they earn interest.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Priority Banking</h3>
+        <blockquote>
+            <p>
+                Priority banking can include several various services, but some popular ones include free checking, online bill pay, financial consultation, and information.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+        <h3> Private Banking</h3>
+        <blockquote>
+            <p>
+                Personalized financial and banking services are traditionally offered to a our digital, high-net-worth individuals (HNWIs). For wealth management purposes,
+                HNWIs have accrued far more wealth than the average person and therefore have the means to access a larger variety of conventional and alternative investments.
+                Our Private bank tellers aim to match such individuals with the most appropriate options.
+            </p>
+        </blockquote>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
