--- a/app/website/planning.html
+++ b/app/website/planning.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="/app/website/static/css/styles.css">
-<title>Cobra Kai Banking : Planning</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>Cobra Kai Banking : Planning</title>
 </head>
+
 <body>
+    <h1>
+        <img src="logo.png" width="600" height="200">
+    </h1>
     <nav>
         <ul>
             <li>
@@ -20,9 +26,105 @@
                 <a href="service.html">Services</a>
             </li>
             <li>
-                <a href="login.html">Login</a>
+                <a href="login.html" class="split">Login</a>
             </li>
         </ul>
     </nav>
+    <h2> Planning </h2>
+    <div class="row">
+        <div class="column">
+            <div class="container">
+                <h3> Investments </h3>
+                <blockquote>
+                    <p>
+                        Offering quality member service from people you know, located at a financial institution you
+                        have confidence in. <br>
+                        Together, we can help you seek your financial goals.<br>
+                        <b>
+                            <ol>
+                                <li>Mutual Funds</li><br>
+                                <li>Stocks</li><br>
+                                <li>Bonds</li><br>
+                                <li>Annuities</li><br>
+                                <li>Fixed Interest Annuities</li><br>
+                                <li>Index Annuities</li><br>
+                                <li>Variable Annuities</li>
+                            </ol>
+                        </b>
+                    </p>
+                </blockquote>
+            </div>
+        </div>
+        <div class="column"style="height: 350px;" >
+            <div class="container">
+                <h3> Retirement </h3>
+                <blockquote>
+                    <p>
+                        Cobra Kai Investment Services available through LPL Financial, offers retirement services for
+                        those in any stage of the retirement planning process.<br>
+                        No matter if you're just getting started planning for retirement, ready to retire or are already
+                        enjoying retirement, we can help you pursue your goals!<br>
+                        Cobra Kai Investment Services, through LPL Financial, offers:
+                        <b>
+                            <ol>
+                                <li>Planning Assistance</li><br>
+                                <li>Retirement Plan Rollover Services</li><br>
+                                <li>Individual Retirement Accounts (IRAs)</li><br>
+                                <li>Traditional IRAs</li><br>
+                                <li>Roth IRAs</li><br>
+                                <li>Spousal IRAs</li><br>
+                                <li>Rollover IRAs</li>
+                            </ol>
+                        </b>
+                    </p>
+                </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+                <h3> Education Planning </h3>
+                <blockquote>
+                    <p>
+                        Cobra Kai Investment Services, available through LPL Financial, offers education planning
+                        for individuals.<br>
+                        Education planning and funding can be beneficial for parents or grandparents saving for their
+                        young children or grandchildren, to help ensure their loved ones are able to attend higher
+                        education.<br>
+
+                        Education Savings Accounts
+                        <b>
+                            <ol>
+                            <li>529 Savings Plans</li><br>
+                            <li>Coverdell Education Savings Accounts</li> <br>
+                            </ol>
+                        </b>
+
+                    </p>
+                </blockquote>
+            </div>
+        </div>
+        <div class="column">
+            <div class="container">
+                <h3> Financial Management </h3>
+                <blockquote>
+                    <p>
+                        Cobra Kai Investment Services, available through LPL Financial, are dedicated career
+                        professionals who were carefully selected and trained to serve credit union members.<br>
+                        They can work with you to help pursue your personal financial goals and provide information on
+                        various products and services.<br>
+                        <b>
+                            <ol>
+                            <li>Setting Goals</li><br>
+                            <li>Creating a Savings and Investment Plan</li><br>
+                            <li>Guarding your Net Worth</li><br>
+                            <li>Helping Create Income from Assets</li><br>
+                            </ol>
+                        </b>
+                    </p>
+                </blockquote>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
