added logo and favicon

--- a/app/website/login.html
+++ b/app/website/login.html
@@ -3,10 +3,14 @@
 
 <head>
   <link rel="stylesheet" href="/app/website/static/css/styles.css">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Cobra Kai Banking : Login</title>
 </head>
 
 <body>
+  <h1>
+    <img src="logo.png" width="600" height="200">
+</h1>
   <nav>
     <ul>
       <li>
