--- a/app/website/index.html
+++ b/app/website/index.html
@@ -25,7 +25,7 @@
                 <a href="service.html">Services</a>
             </li>
             <li>
-                <a href="login.html">Login</a>
+                <a href="login.html" class="split">Login</a>
             </li>
         </ul>
         </nav>
