--- a/app/website/profile.html
+++ b/app/website/profile.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/app/website/static/css/styles.css">
 <title>Cobra Kai Banking</title>
 </head>
 <body>
+    <h1>
+        <img src="logo.png" width="600" height="200">
+    </h1>
     <nav>
         <ul>
             <li>
@@ -20,7 +24,7 @@
                 <a href="service.html">Services</a>
             </li>
             <li>
-                <a href="login.html">Logout</a>
+                <a href="login.html" class="split">Logout</a>
             </li>
         </ul>
     </nav>
